no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -5,17 +5,11 @@
 
 
 TODO:
-  - commands:
-     - https://github.com/golang/go/wiki/GOPATH
-     - https://github.com/golang/go/wiki/PackageManagementTools
-     - https://github.com/golang/go/wiki/Modules
-     - https://github.com/golang/go/wiki/PackagePublishing
-     - https://www.johnsto.co.uk/blog/go-package-go/
-     - https://github.com/matttproud/gochecklist
   - godoc: https://pkg.go.dev/golang.org/x/tools/cmd/godoc?tab=doc
   - package sites:
      - https://godoc.org/
      - https://pkg.go.dev/
+     - https://labix.org/gopkg.in
   - https://blog.golang.org
   - https://golang.org/pkg/
      - after io package:
@@ -27,13 +21,26 @@ TODO:
   - https://github.com/golang?type=source
   - https://pkg.go.dev/golang.org/x/tools
   - add VSCode shortcuts
-  - delve and other debuggers
-      - https://rakyll.org/coredumps/
-  - go through to_learn.txt
-  - https://github.com/golang/go/wiki/CodeTools
-  - https://github.com/golang/go/wiki/Projects
-  - https://github.com/golang/go/wiki/LearnServerProgramming#toolkits-and-frameworks
-  - https://github.com/avelino/awesome-go
+  - specific tools:
+     - lists:
+        - go through to_learn.txt
+        - https://github.com/golang/go/wiki/CodeTools
+        - https://github.com/golang/go/wiki/Projects
+        - https://github.com/golang/go/wiki/LearnServerProgramming#toolkits-and-frameworks
+        - https://github.com/avelino/awesome-go
+     - debuggers:
+        - delve
+           - https://rakyll.org/coredumps/
+     - runtime version management:
+        - https://bitbucket.org/ymotongpoo/goenv/src/develop/
+        - https://github.com/syndbg/goenv
+        - https://github.com/moovweb/gvm
+     - dependencies updates:
+        - https://github.com/psampaz/go-mod-outdated
+        - https://github.com/oligot/go-mod-upgrade
+     - linting:
+        - https://github.com/golangci/golangci-lint
+        - https://github.com/golang/lint
 
 VERSION ==>                       #1.15.0
                                   #For both language and standard library
