--- a/Languages/Go/go_modules.cli.txt
+++ b/Languages/Go/go_modules.cli.txt
@@ -27,6 +27,7 @@ import "IMPORT_PATH"              #"IMPORT_PATH" locates the PACKAGE on the file
                                   #  - GOPATH/src
                                   #  (if non-module-aware, and start with . or ..)
                                   #  - $PWD ("relative IMPORT_PATH")
+                                  #When importing PACKAGEs from the same MODULE, IMPORT_PATH must still be full
 
 go tool compile
 -D DIR                            #Relative IMPORT_PATHs base (instead of $PWD)
@@ -93,6 +94,9 @@ IMPORT_PATHS                      #Is space-separated list of:
                                   #  - is like a globbing *
                                   #  - can expand to 0|1|n PACKAGEs
                                   #  - can match empty string
+                                  #  - often used:
+                                  #     - ./...: current PACKAGEs
+                                  #     - ...REPO_PATH: as a shortcut to MODULE_PATH/REPO_PATH
 
 
                                              /=+===============================+=\
@@ -166,7 +170,8 @@ ENVVAR GOINSECURE                 #Like -insecure, but as MODULE_PATHS
                                   #  - git tag|LBRANCH|COMMIT
                                   #Otherwise, by priority order:
                                   #  (if module-aware)
-                                  #  - highest git tag: vA.B.C[-D][+E]
+                                  #  - highest git tag: [DIR/]vA.B.C[-D][+E]
+                                  #     - DIR is for monorepos
                                   #  - latest commit: v0.0.0-YYYYMMDDHHMMSS-XXXXXXXXXXXX
                                   #     - last part is git commit hash
                                   #  (if non-module-aware)
@@ -194,7 +199,8 @@ VERSIONING ==>                    #go get:
                                   #     - only for non-module-aware importers
                                   #     - if only module-aware importers, not a problem
                                   #  - by convention: append "/vMAJOR" to MODULE_PATH
-                                  #     - i.e. add a "/vMAJOR" source directory, and keep previous version
+                                  #     - for old Go versions compatibility, can also add a "/vMAJOR" source directory,
+                                  #       and keep previous version
                                   #Encourages avoiding any breaking changes
                                   #  - except for v0.*.*
 
@@ -304,6 +310,8 @@ go list IMPORT_PATHS              #Prints all PACKAGEs, one per line
                                   #JSON OBJ is only OBJ.Module
                                   #Def -f flag includes many fields: Path|Version|Replace|Update
                                   #Cannot use -deps, but can use "all" as argument instead
+-u                                #Show latest MODULE_VERSION
+                                  #Only with -m
 
 -f TEMPLATE                       #Of JSON output
                                   #Def: '{{.ImportPath}}'
@@ -451,6 +459,9 @@ go mod download MODULE_PATH_LIST  #Like go go get, but with MODULE_PATH, and doe
 -x                                #Verbose
 -json                             #JSON output
 
+ALTERNATIVE PACKAGE MANAGERS ==>  #Alternative package managers have existed before Go 1.11 modules, but are now discouraged.
+                                  #This includes: dep, godep, govendor, glide, gom, gop, manul, gvt
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -504,6 +515,7 @@ ENVVAR GOPRIVATE                  #Combines GONOPROXY + GONOSUMDB
 go.sum                            #File containing checksum of each package (both go.mod and rest of files), for each vMODULE_VERSION, one per line.
                                   #Sibling to go.mod, created|updated together.
                                   #Goal: integrity when installing again on same|other machine.
+                                  #Should be git committed.
 
 go mod verify                     #Checks that installed packages match their go.sum
 
