--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -43,7 +43,7 @@ TODO:
         - https://github.com/golang/lint
 
 VERSION ==>                       #1.15.0
-                                  #For both language and standard library
+                                  #Semver is respected for both language and standard library
                                   #  - not the "sub-repositories" libraries
                                   #  - not the go CLI
 
