--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -2165,7 +2165,7 @@ html/*                           ##Node module 'eslint-plugin-html'
                                              \=+===============================+=/
 
 
-markdown/*                       ##Node module 'eslint-plugin-markdown' (1.0.2)
+markdown/*                       ##Node module 'eslint-plugin-markdown' (2.0.0-rc.0)
                                  ##Allows parsing inside Markdown, but must adjust eslint --ext
                                  ##Must specify ```js|javascript|jsx|node
 <!-- eslint-* ... -->            ##Can add eslint comment as HTML comments before the ``` block
