no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -73,6 +73,8 @@ CORE DOCUMENTATION ==>            #Core:
                                   #Code generation:
                                   #  - go_fix
                                   #  - go_generate
+                                  #Publishing:
+                                  #  - pkg_go_dev
 
 
                                              /=+===============================+=\
