no commit message

--- a/Languages/Go/go_modules.cli.txt
+++ b/Languages/Go/go_modules.cli.txt
@@ -492,8 +492,9 @@ proxy.golang.org                  #Goals:
                                   #  - better performance
                                   #  - using sum.golang.org
                                   #  - for Go team to monitor|debug
+                                  #  - used by pkg.go.dev for package search
                                   #Run by Google
-                                  #Cached for 1 minute, i.e. takes up to 1 minute for new versions to appear
+                                  #Cached for few minutes, i.e. takes up to few minutes for new versions to appear
                                   #Can opt-out with GOPROXY=direct
 index.golang.org/index            #Show latest PACKAGEs added to proxy.golang.org, as JSON feed
                                   #Each OBJ: Version|Time (see above), Path: "MODULE_PATH"
