no commit message

--- a/Languages/Go/go_modules.cli.txt
+++ b/Languages/Go/go_modules.cli.txt
@@ -204,6 +204,10 @@ VERSIONING ==>                    #go get:
                                   #Encourages avoiding any breaking changes
                                   #  - except for v0.*.*
 
+gopkg.in/[USER/]REPO.vX           #One of the many pre-Go-module way to version modules (not necessary anymore)
+                                  #URL renamed to github.com/USER/REPO with git branch vX[.Y[.Z]]
+                                  #  - def USER: go-REPO
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
