--- a/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
+++ b/Languages/Language_processing/Beautifiers/Multi_language/prettier.node_cli.txt
@@ -19,7 +19,7 @@ ALTERNATIVES ==>                  #For:
                                   #     - esformatter (and jsfmt): not maintained
                                   #     - es-beautifier: not maintained
 
-VERSION ==>                       #2.0.5
+VERSION ==>                       #2.1.1
 
 OPINIONATED ==>                   #By design prettier does not allow configuration.
                                   #There are only few configuration options available for JavaScript
@@ -40,9 +40,9 @@ CONF                              #Uses Cosmiconfig, i.e.
                                   #  - prettier --config JSON|YAML|JS_FILE
                                   #  - ./[../.../]package.json "prettier" CONF|'PACKAGE'
                                   #  - ./[../.../].prettierrc JSON|YAML_FILE
-                                  #  - ./[../.../].prettierrc.json|y[a]ml|toml|js JSON|YAML|TOML|JS_FILE
+                                  #  - ./[../.../].prettierrc.json|json5|y[a]ml|toml|js JSON|YAML|TOML|JS_FILE
                                   #     - .prettierrc.json JSON can be just 'PACKAGE'
-                                  #  - ./[../.../]prettier.config.js JS_FILE
+                                  #  - ./[../.../]prettier.config.js|cjs JS_FILE
                                   #CONF_FILE properties:
                                   #  - camelCase
                                   #  - PROPs ARR if property can be added several times
@@ -100,7 +100,7 @@ CONF.overrides                    #Sub-CONF for specific files, with OBJ_ARR:
 prettier [FILE|DIR|'GLOB'...]     #Prints to stdout
                                   #Def: stdin
 --stdin-filepath FILE             #
---write                           #Edit in-place
+--write|w                         #Edit in-place
 
 -l                                #Dry-run printing files that can be beautified
 --list-different                  #Exit code 1 if there are some files.
@@ -158,6 +158,7 @@ PRETTIER.getFileInfo[.sync]
                                   #  - 'vue'
                                   #  - 'angular'
                                   #  - 'lwc' (Salesforce "Lightning Web Components")
+--ignore-unknown|u                #Do not error if no parser can be found
 
 --plugin NAME|FILE                #A plugin is responsible for beautifying some specific syntax, by parsing then
                                   #reprinting it.
@@ -166,6 +167,9 @@ PRETTIER.getFileInfo[.sync]
                                   #Looked in node_modules/ under @prettier/plugin-NAME or prettier-plugin-NAME
                                   #See online doc for how to develop own plugin
 --plugin-search-dir DIR           #Def: node_modules
+
+--embedded-language-formatting=STR#'auto' (def) or 'off'
+                                  #Whether to format code inside strings
 
 
                                              /=+===============================+=\
