no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.8.0 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.9.0 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -63,6 +63,8 @@ clear|setImmediate(...)                         #
 ID.[un]ref()->ID                                #Yield the macrotask (see JavaScript doc)
 ID.hasRef()->BOOL                            11*#
 ID.refresh()->ID                                #Reset the counter
+ID[Symbol.toPrimitive]()->ID_NUM         12.9.0*#
+ID_NUM                                   12.9.0*#Can be passed to clear*(...)
 
 queueMicrotask(FUNC())                       11*#Add a new microtask (see JavaScript doc)
                                             <12*#Experimental (throw warning)
@@ -623,6 +625,7 @@ PACKAGE.exports.CONDITION                    12*#'URI'[_ARR]. Like PACKAGE.expor
                                              12*#  - custom ones, e.g. 'electron', 'deno', etc.
                                              12*#CONDITION can be nested.
                                              12*#Matched|tried in object properties order.
+--conditions=CONDITION,...               14.9.0*#Specify custom CONDITION
 
 PACKAGE.exports[.CONDITION].PATH             12*#'PATH2'. Like PACKAGE.exports[.CONDITION] except final 'URI' maps input path.
                                              12*#PATH must start with '.':
@@ -789,6 +792,7 @@ BUFFER.readBig[U]Int64LE|BE
  (UINT)->BIGINT                         10.20.0*#
 BUFFER.readBig[U]Int64LE|BE
  (BIGINT, UINT)                         10.20.0*#
+BUFFER.*int*(...)                        14.9.0*#Like BUFFER.*Int*(...)
 
 BUFFER.swap16|32|64()->BUFFER                   #Swaps every couple of 1|2|4 bytes. Return value is reference
 
@@ -2833,6 +2837,7 @@ MULTI-THREADING ==>                             #Uses threads not processes, i.e
 
 new Worker(SCRIPT[, OPTS])                      #SCRIPT is 'PATH'
                                              12*#or URL with file: scheme
+                                         14.9.0*#or URL with data: scheme
                                                 #OPTS:
                                                 #  - eval BOOL (def: false): use inline 'JAVASCRIPT' instead
                                                 #  - workerData VAL:
@@ -3503,9 +3508,13 @@ format(STR[, STR2...])                          #Printf-like FUNC, STR can conta
                                                 #  - "%%": escape
 formatWithOptions(OBJ, ...)                     #Like format(...) except if can specify inspect() options OBJ
 
-debuglog(STR)                                   #Returns FUNC() that works like console.error() except:
+debug[log](STR)->DEBUG_FUNC                     #
+                                         12.9.0*#Can be called debug(...)
+DEBUG_FUNC(...)                                 #Like console.error(...) except:
                                                 #  - appends STR
-                                                #  - noop unless envvar NODE_DEBUG "STR2,..." (can include *) includes STR
+                                                #  - noop unless DEBUG_FUNC.enabled true
+DEBUG_FUNC.enabled                       12.9.0*#BOOL
+                                         12.9.0*#Def: if ENVVAR NODE_DEBUG "STR2,..." (can include *) includes STR
 
 promisify(FUNC(..., FUNC2(ERROR, VAL)))->FUNC   #Transform FUNC so FUNC(...)->PROMISE(ERROR|VAL)
                                                 #If calling FUNC(..., FUNC2), FUNC2 still gets called, and PROMISE do not get
