no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -11,7 +11,7 @@ VERSION ==>                                     #Standard is called ECMAScript. 
 SUPPORT ==>                                     #Use this notation for new features:
                                                ~#  - stage 3 proposal
                                             NUM*#  - introduced by Node NUM.*.* (starting at Node 9)
-                                               *#  - not Node 14.0.0
+                                               *#  - not Node 14.9.0
                                                -#  - not all supported web browsers
                                                |#  - a core Babel plugin exists (only documented if lacks Node/browser support)
                                               ||#  - a non-core Babel plugin exists
@@ -584,9 +584,9 @@ FUNC([VAL]...)                                  #Fire FUNC and returns its retur
                                               -|#Can be ...ITERABLE, replaced by NEXT...
                                               -|#Can use trailing commas
 
-FUNC?.(...)                                14*-|#Like FUNC == null ? undefined : FUNC(...)
-                                           14*-|#Does not work with new FUNC?.(...)
-OBJ?.FUNC(...)                             14*-|#Like OBJ == null ? undefined : OBJ.FUNC(...)
+FUNC?.(...)                            14.0.0*-|#Like FUNC == null ? undefined : FUNC(...)
+                                       14.0.0*-|#Does not work with new FUNC?.(...)
+OBJ?.FUNC(...)                         14.0.0*-|#Like OBJ == null ? undefined : OBJ.FUNC(...)
 
 FUNC.length                                     #Number of required arguments
 
@@ -650,8 +650,8 @@ OBJ.VAR                                         #Access property (can be any typ
 OBJ['VAR']                                      #OBJ.VAR has same naming restrictions as QUAL VAR, except can be a reserved word
                                                 #OBJ['VAR'] can use any valid STR
 
-OBJ?.VAR                                   14*-|#Like OBJ == null ? undefined : OBJ.VAR
-OBJ?.['VAR']                               14*-|#Like OBJ == null ? undefined : OBJ['VAR']
+OBJ?.VAR                               14.0.0*-|#Like OBJ == null ? undefined : OBJ.VAR
+OBJ?.['VAR']                           14.0.0*-|#Like OBJ == null ? undefined : OBJ['VAR']
 
 { VAR[: VAL] ... }                              #Literal OBJ.
                                                 #If could be interpreted as a { ... } structure (e.g. beginning of line),
@@ -838,7 +838,7 @@ class ... {
                                           12*-|~#VAR can [STR]
   static VAR[ = EXPR][, ...];             12*-|~#Calls TYPE.VAR = EXPR right-away (in EXPR, this is TYPE)
   [static] #VAR[ = EXPR][, ...];          12*-|~#Like VAR = EXPR and FUNC(...), except can only be refered to inside class,
-  #FUNC(...) { ... }                      12*-|~#i.e. using this.#VAR and this.#FUNC(...). Not inherited.
+  #FUNC(...) { ... }                  14.6.0*-|~#i.e. using this.#VAR and this.#FUNC(...). Not inherited.
 }                                         12*-|~#Can only be declared during class declaration.
 
 super                                         -|#Inside class {...}, same as TYPE_PARENT
@@ -925,11 +925,11 @@ TEST ? VAL1 : VAL2                              #Returns VAL1 or VAL2
 
 VAL && VAL2                                     #Same as VAL ? VAL : VAL2
 VAL || VAL2                                     #Same as VAL ? VAL2 : VAL
-VAL ?? VAL2                                14*-|#Same as VAL == null ? VAL : VAL2
+VAL ?? VAL2                            14.0.0*-|#Same as VAL == null ? VAL : VAL2
 
 VAR &&= VAL2                                 *-|#Same as VAR = VAR && VAL2
 VAR ||= VAL2                                 *-|#Same as VAR = VAR || VAL2
-VAR ??= VAL2                                 *-|#Same as VAR = VAR ?? VAL2
+VAR ??= VAL2                           14.0.0*-|#Same as VAR = VAR ?? VAL2
 
 VAL1, VAL2                                      #Evaluates both, but returns VAL2.
                                                 #Use case: in for or while loops.
@@ -1501,7 +1501,7 @@ Array.of(VAL...)                              -|#Same as new Array(VAL...) excep
                                               -|#VAL can be ...ITERABLE
 
 ARR[NUM]                                        #
-ARR?.[NUM]                                 14*-|#Like ARR == null ? undefined : ARR[NUM]
+ARR?.[NUM]                             14.0.0*-|#Like ARR == null ? undefined : ARR[NUM]
 
 ARRAYLIKE                                       #Any OBJ which understand OBJ[NUM] and OBJ.length
                                                 #Can use all ARR methods, except concat() using:
