no commit message

--- a/Languages/Go/go_language.language.txt
+++ b/Languages/Go/go_language.language.txt
@@ -60,6 +60,7 @@ CORE DOCUMENTATION ==>            #Core:
                                   #  - go_msan
                                   #Documentation:
                                   #  - go_doc
+                                  #  - godoc
                                   #Testing:
                                   #  - go_test
                                   #  - go_examples
