no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -9,7 +9,7 @@ ALTERNATIVES ==>                  #  - eslint (prefered): more rules, more confi
                                   #  - jscs: not maintained, merged with eslint
                                   #  - jshint
 
-VERSION ==>                       #7.7.0
+VERSION ==>                       #7.8.1
                                   #JavaScript linter, using Espree parser.
 
 TYPE                              #ESTree type
@@ -1014,6 +1014,7 @@ no-magic-numbers [OBJ]            #Must use constant variables instead of consta
                                   #OBJ:
                                   #  - ignore NUM_ARR (def: [])
                                   #  - ignoreArrayIndexes BOOL (def: false)
+                                  #  - ignoreDefaultValues BOOL (def: false)
                                   #  - enforceConst BOOL (def: false)
                                   #  - detectObjects BOOL (def: false): analyze OBJ declaration members
 
@@ -1082,6 +1083,7 @@ id-length [OBJ]                   #VAR names length
                                   #  - min NUM (def: 2)
                                   #  - max NUM (def: Infinity)
                                   #  - exceptions 'VAR'_ARR
+                                  #  - exceptionPatterns 'REGEXP'_ARR
                                   #  - properties 'always' (def) or 'never': whether to check OBJ.VAR
 camelcase [OBJ]                   #VAR must be camelCase or CONSTANT_CASE
                                   #OBJ:
