no commit message

--- a/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
+++ b/Languages/Static_analysis/Duplicated_code/JavaScript/jscpd.node_cli.txt
@@ -5,7 +5,7 @@
 
 
 
-VERSION ==>                       #3.3.16
+VERSION ==>                       #3.3.19
 
 ALTERNATIVES ==>                  #  - jscpd (prefered): multi-languages
                                   #  - jsinspect: JavaScript-only, does not always work correctly
@@ -76,6 +76,8 @@ CONF.reporters                    #STR_ARR
                                   #  - json: to jscpd-report.json
                                   #  - xml
                                   #  - html
+                                  #  - markdown
+                                  #  - csv
 CONF.output                       #DIR for json|xml|html reporters (def: ./report)
 CONF.absolute                     #BOOL (def: false). Use absolute paths in reports.
 CONF.xslHref                      #FILE. Used with XML and XSL
