no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -513,7 +513,7 @@ unicorn/no-abusive-eslint-disable##/* eslint-disable RULE */ only, not /* eslint
 eslint-comments/
  no-aggregating-enable           ##No /* eslint-enable */ after several /* eslint-disable [RULE] */
 eslint-comments/
- no-restricted-disable 'GLOB'_ARR##No /* eslint-disable RULE */ with RULE matchging 'GLOB'
+ no-restricted-disable 'GLOB'_ARR##No /* eslint-disable RULE */ with RULE matching 'GLOB'
 eslint-comments/no-use [OBJ]     ##Forbids all ESLint comments
                                  ##OBJ: allow STR_ARR, among 'eslint', 'eslint-disable|enable', 'eslint-disable-[next-]line',
                                  ##'eslint-env', 'exported', 'global[s]'
