no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -481,6 +481,7 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
                                   #  - body CLASS_BODY
                                   #Type 'ClassBody':
                                 tb#  - body METHOD_DEFINITION|PROPERTY_DEFINITION_ARR
+                                 *#    or STATIC_BLOCK
                               (t)##  - body METHOD_DEFINITION|CLASS_PROPERTY_ARR
                               (b)##  - body CLASS_METHOD|CLASS_PROPERTY_ARR
                                  b#Type 'MethodDefinition':
@@ -498,6 +499,7 @@ class [CLASS] [extends PARENT] {  #Type 'Class':
                                se|#  - [value EXPR]
                                se|#  - static BOOL
                                se|#  - computed BOOL
+  static { STATEMENT... }        *#Child of BLOCK, type 'StaticBlock'
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
@@ -529,6 +531,7 @@ export {}                         #Child of MODULE_DECLARATION, type 'ExportName
 export { VAR [as VAR2|default] }  #  - specifiers EXPORT_SPECIFIER_ARR (child of MODULE_SPECIFIED, type 'ExportSpecifier'):
                                   #     - local IDENTIFIER (VAR)
                                   #     - exported IDENTIFIER (VAR2|default)
+  assert { VAR: STR, ... }        #  - [assertions IMPORT_ATTRIBUTE_ARR]
 export QUAL VAR = VAL[, ...]      #
 export function VAR() {}          #
 export class CLASS {}             #  - [declaration DECLARATION]
@@ -541,6 +544,7 @@ export default VAL                #Child of MODULE_DECLARATION, type 'ExportDefa
 export * [as VAR] from "MDL"      #Child of MODULE_DECLARATION, type 'ExportAllDeclaration':
                                   #  - source LITERAL ("MDL")
                                   #  - [exported IDENTIFIER] (VAR)
+  assert { VAR: STR, ... }        #  - [assertions IMPORT_ATTRIBUTE_ARR]
 export * as VAR from "MDL" (aeml)##Child of EXPORT_SPECIFIER, type 'ExportNamespaceSpecifier':
                            (aeml)##  - no local
                               (m)##  - exported -> specifier
@@ -551,8 +555,8 @@ import ... from "MDL"             #Child of MODULE_DECLARATION, type 'ImportDecl
                                   #  - specifiers MODULE_SPECIFIER_ARR
                                   #  - source LITERAL ("MDL")
                               (b)##  - importKind 'type|typeof|value'|null
-  with VAR: STR, ...          (b)*#  - [attributes IMPORT_ATTRIBUTE_ARR (type 'ImportAttribute')]
-                              (b)*#     - key IDENTIFIER
+  assert { VAR: STR, ... }    (b)*#  - [assertions IMPORT_ATTRIBUTE_ARR (type 'ImportAttribute')]
+                              (b)*#     - key IDENTIFIER|LITERAL
                               (b)*#     - value STR
 import { VAR|default [as VAR2] }  #Child of MODULE_SPECIFIER, type 'ImportSpecifier':
                                   #  - imported IDENTIFIER (VAR)
