no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.9.0 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.10.1 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -3248,6 +3248,9 @@ randomBytes(NUM[, FUNC(ERROR, BUFFER)])         #Generates random BUFFER of leng
                                                 #If no FUNC, synchronous (returns BUFFER)
 randomFill[Sync](TDBUFFER[, NUM[, NUM2]]        #Like randomBytes() but by filling in a TDBUFFER instead, from offset NUM
 [, FUNC(ERROR, TDBUFFER)])[->BUFFER]            #(def: 0) with length NUM2 (def: TDBUFFER.lBUFFER.length).
+randomInt
+ ([UINT, ]UINT2[, FUNC(ERROR, UINT3)])  14.10.0*#Generates random UINT3 from UINT (included, def: 0) to UINT2 (excluded)
+randomInt([UINT, ]UINT2)->UINT3         14.10.0*#Is cryptographically secure (e.g. from /dev/random)
 
 getFips()->BOOL                                 #True if Node has been:
                                                 #   - built to be FIPS-compliant (by def, is not)
@@ -3383,6 +3386,16 @@ PERFNODETIMING.environment                      #Environment initialized
 PERFNODETIMING.bootstrapComplete                #End of all require()
 PERFNODETIMING.loopStart                        #Start of event loop
 PERFNODETIMING.loopExit                         #End of event loop. Not sure when it is not 0
+PERFNODETIMING.idleTime                 14.10.0*#How long event loop was idle
+
+PERFORMANCE.eventLoopUtilization        14.10.0*#Measure event loops:
+ ([OBJ2][, OBJ3])->OBJ                  14.10.0*#  - from OBJ2 (def: process start)
+                                        14.10.0*#  - until OBJ3 (def: now)
+                                        14.10.0*#  - where OBJ2|OBJ3 are previous eventLoopUtilization() return values
+                                        14.10.0*#OBJ:
+                                        14.10.0*#  - active DOMDURATION: event loop active
+                                        14.10.0*#  - idle DOMDURATION: inverse
+                                        14.10.0*#  - utilization: active / (active + idle)
 
 PERFGCTIMING                                    #PERFENTRY for garbage collector, with:
                                                 #  - entryType 'gc'
