no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -1328,6 +1328,9 @@ TCPSOCKET.setTimeout(UINT[, FUNC()])->TCPSOCKET #Emits timeout event after UINTm
                                                 #FUNC is 'timeout' event handler
                                                 #Uses setTimeout(), i.e. done at macrotask level, i.e. might take longer than
                                                 #UINTms if long macrotasks.
+                                                #Error handling:
+                                                #  - exceptions thrown in FUNC are uncaught exceptions.
+                                                #  - TCPSOCKET.emit('error', ERROR) is usually better
 TCPSOCKET.on('timeout', FUNC())                 #
 
 TCPSOCKET.setKeepAlive(BOOL, UINT)->TCPSOCKET   #Def: false and 0.
