no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -160,6 +160,7 @@ VAR                               #Child of EXPR+PATTERN, type 'Identifier':
 
 OBJ.VAR                           #Child of EXPR+PATTERN, type 'MemberExpression':
 OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
+class.VAR                        *#    or CLASS_OBJECT (type 'ClassObject')
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
                               set|#    or PRIVATE_IDENTIFIER (#VAR)
                                   #  - computed true (VAL) or false (VAR)
