no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1575,7 +1575,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (21.0.0)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (22.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
@@ -1798,6 +1798,19 @@ import/no-named-as-default       ##Avoid import VAR from 'PATH', if PATH exports
                                  ##but also a named VAR named the same
 import/no-named-as-default-member##Avoid import VAR from 'PATH', then using VAR.VAR2, if PATH exports both a default VAR,
                                  ##but also a named VAR2
+unicorn/import-style [OBJ]       ##Enforces specific destructuring style for import|require
+                                 ##OBJ:
+                                 ##  - styles.MODULE
+                                 ##     - either:
+                                 ##        - STYLE BOOL (def: false): allow specific STYLE among:
+                                 ##           - default: import VAR from 'MODULE'
+                                 ##           - named: import {VAR} from 'MODULE'
+                                 ##           - namespace: import * as VAR from 'MODULE'
+                                 ##           - unassigned: import 'MODULE'
+                                 ##        - false: ignore
+                                 ##     - always, unless overridden:
+                                 ##        - util: {named:true}
+                                 ##        - path|chalk: {default:true}
 
 import/no-namespace              ##Avoid import *
 import/no-named-default          ##Avoid import { default as VAR }
