no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1808,9 +1808,14 @@ unicorn/import-style [OBJ]       ##Enforces specific destructuring style for imp
                                  ##           - namespace: import * as VAR from 'MODULE'
                                  ##           - unassigned: import 'MODULE'
                                  ##        - false: ignore
-                                 ##     - always, unless overridden:
+                                 ##     - def:
                                  ##        - util: {named:true}
                                  ##        - path|chalk: {default:true}
+                                 ##  - extendDefaultStyles BOOL: if true (def), default styles are extended, not overriden
+                                 ##  - checkRequire BOOL (def: true): if false, ignore require()
+                                 ##  - checkImport BOOL (def: true): if false, ignore ESM import
+                                 ##  - checkDynamicImport BOOL (def: true): if false, ignore ESM import()
+                                 ##  - checkExportFrom BOOL: if false (def), ignore ESM export ... from
 
 import/no-namespace              ##Avoid import *
 import/no-named-default          ##Avoid import { default as VAR }
