no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #14.11.0 (current), 13.14.0 (current), 12.18.3 (active LTS), 10.22.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #14.11.0 (current), 13.14.0 (current), 12.18.4 (active LTS), 10.22.1 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -1584,6 +1584,9 @@ HTTPSERVER.on("timeout", FUNC(RES))             #Called when any RES 'timeout' e
 HTTPSERVER.headersTimeout                    11*#Like HTTPSERVER.timeout but for the time taken to receive HTTP headers.
                                              12*#Def: 6e4, i.e. one minute
                                              11*#  - used to be 4e4, i.e. 40 secs
+HTTPSERVER.requestTimeout               14.11.0*#Like HTTPSERVER.timeout but for the time taken to receive HTTP headers + body.
+                                        14.11.0*#If over, sends 408
+                                        14.11.0*#Def: 0
 
 HTTPSERVER.keepAliveTimeout                     #Keep TCPSOCKET NUMms (def: 5000) after RES.end() was called, so it can be
                                                 #reused if a new request from same host arrives.
