no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - typescript (preferred)
                                   #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
 
-VERSION ==>                       #4.0.0
+VERSION ==>                       #4.1.0
 
 
                                              /=+===============================+=\
@@ -280,9 +280,10 @@ TYPE[TYPE2]                       #UTYPE of TYPE properties values (including me
                                   #  - ARR_TYPE[number]: TYPE of any ARR element
                                   #  - OBJ_TYPE[keyof OBJ_TYPE]: TYPE of any property
 
-{ [T in KUTYPE]: TYPE2 }          #Expanded to OBJ_TYPE ("mapped type") where:
+{ [T in KUTYPE [as TYPE3]]: TYPE2}#Expanded to OBJ_TYPE ("mapped type") where:
                                   #  - keys are each KTYPE in KUTYPE
-                                  #  - TYPE2 can refer to T (current KTYPE)
+                                  #     - can use TYPE3 to map
+                                  #  - TYPE2|TYPE3 can refer to T (current KTYPE, before TYPE3 mapping)
                                   #Cannot define other properties directly:
                                   #  - but can do it through ... & OBJ_TYPE2
                                   #Often used to map a TYPE using { [P in keyof TYPE]: TYPE[P] }
@@ -344,6 +345,11 @@ undefined                         #
 null                              #
 
 --strictNullChecks                #Unless set, transtype TYPE <-- undefined|null always possible
+--noUncheckedIndexedAccess        #Consider any OBJ.VAR or OBJ[NUM|STR] potentially undefined:
+                                  #  - if they have an index type
+                                  #     - usually includes any ARR[NUM]
+                                  #  - unless they are being iterated with for of|in or ARR.FUNC()
+                                  #     - but not with normal for loop
 NonNullable<TYPE>                 #TYPE minus undefined|null
 
 { VAR[?][: TYPE],... }            #Many TYPEs and assertions use ? which allows:
@@ -378,6 +384,12 @@ unique symbol                     #TYPE for any SYM, excluding well-known SYM. C
 
 BOOL|NUM|STR|BIGINT               #TYPE for specific value ("literal type"). Must be literal value.
                                   #Transtyping from BOOL <--> boolean (and others) is "narrowing"|"widening"
+`...${STR_TYPE}...`               #STR literal type can use template string
+                                  #If STR_UTYPE, expanded to `...${STR}...` | ...
+Uppercase<STR_TYPE>
+Lowercase<STR_TYPE>
+Capitalize<STR_TYPE>              #STR_TYPE2 with different case
+Uncapitalize<STR_TYPE>            #Can be STR_UTYPE
 
 
                                              /=+===============================+=\
@@ -1227,6 +1239,7 @@ DIFFERENCE FROM JAVASCRIPT ==>    #  - types: declarations, assertions, declare
                                   #Can do type assertions with JSDoc, which removes all differences above.
                                   #Also transpile *.js
 --checkJs                         #Also do type checking inside *.js
+                                  #Implies --allowJs
 --maxNodeModuleJsDepth NUM        #Run --allowJs (if enabled) on imported 'MODULE' (instead of only 'PATH') providing:
                                   #  - they are NUM levels deep in dependencies tree
                                   #  - no *.ts[x]|d.ts can be found
