no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -926,6 +926,8 @@ tsc --jsx STR                     #Allows JSX.
                                   #  - 'preserve' (def): kept as is, with *.jsx
                                   #  - 'react-native' (def): kept as is, with *.js
                                   #  - 'react[-native]': to React.createElement(...), with *.js
+                                  #  - 'react-jsx': to jsx()
+                                  #  - 'react-jsxdev': to jsxs()
                                   #Cannot use <TYPE>VAL (but can use "VAL as TYPE")
 tsc --jsxFactory STR              #'FUNC' (def: 'React.createElement') used with --jsx 'react'
 /* @jsx STR */                    #Useful when using an alternative library (e.g. Preact)
